--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "parcel": "^1.12.4",
     "popper.js": "^1.16.1",
     "quill": "1.3.6",
+    "quill-emoji": "^0.1.8",
     "swiper": "^6.4.7"
   },
   "devDependencies": {
