--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "parcel": "^1.12.4",
     "popper.js": "^1.16.1",
+    "public": "^0.1.5",
     "quill": "1.3.6",
     "quill-emoji": "^0.1.8",
     "swiper": "^6.4.7"
