--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "fightNews",
   "version": "1.0.0",
   "scripts": {
@@ -7,6 +7,7 @@
     "build": "yarn clear && parcel build src/pages/*.html --public-url . --no-source-maps --no-minify"
   },
   "dependencies": {
+    "@webcomponents/webcomponentsjs": "^2.5.0",
     "bootstrap": "^4.6.0",
     "components": "^0.1.0",
     "ftellipsis": "^0.2.3",
