--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "public": "^0.1.5",
     "quill": "1.3.6",
     "quill-emoji": "^0.1.8",
+    "simplebar": "^5.3.0",
     "swiper": "^6.4.7"
   },
   "devDependencies": {
